2014-04-22  Alex Christensen  <achristensen@webkit.org>

        Removed old stdbool and inttypes headers.
        https://bugs.webkit.org/show_bug.cgi?id=131966

        Reviewed by Brent Fulgham.

        * Source/cmake/OptionsWindows.cmake:
        * Source/cmake/WebKitPackaging.cmake:
        Removed references to os-win32 directory.        

2014-04-22  Zan Dobersek  <zdobersek@igalia.com>

        Fix a typo in WebKitFeatures.cmake -- INITALVALUE -> INITIALVALUE.

        Rubber-stamped by Carlos Garcia Campos.

        * Source/cmake/WebKitFeatures.cmake:

2014-04-18  Jon Honeycutt  <jhoneycutt@apple.com>

        Empty RenderInline objects should not be line break objects.

        https://bugs.webkit.org/show_bug.cgi?id=131861
        <rdar://problem/15663617>

        Reviewed by David Hyatt.

        * ManualTests/empty-inline-as-line-break-position.html: Added.
        This issue wouldn't reproduce in WebKitTestRunner.

2014-04-19  Brent Fulgham  <bfulgham@apple.com>

        Revert unintended workspace change in my last commit.

        * WebKit.xcworkspace/xcshareddata/xcschemes/All Source (target WebProcess).xcscheme: Set the
        Scheme type back to Debug.

2014-04-18  Philippe Normand  <pnormand@igalia.com>

        Remove NETWORK_INFO support
        https://bugs.webkit.org/show_bug.cgi?id=131841

        Reviewed by Gyuyoung Kim.

        * Source/cmake/OptionsEfl.cmake:
        * Source/cmake/OptionsGTK.cmake:
        * Source/cmake/WebKitFeatures.cmake:
        * Source/cmakeconfig.h.cmake:

2014-04-17  Darin Adler  <darin@apple.com>

        Try to fix EFL and GTK builds.

        * Source/cmake/OptionsEfl.cmake: Add INDEXED_DATABASE_IN_WORKERS.
        * Source/cmake/OptionsGTK.cmake: Ditto.
        * Source/cmakeconfig.h.cmake: Ditto.

2014-04-16  Brendan Long  <b.long@cablelabs.com>

        [GTK][CMAKE] build-webkit doesn't detect when the build fails
        https://bugs.webkit.org/show_bug.cgi?id=130148
