@@ -69,7 +69,7 @@ WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_FAST_MOBILE_SCROLLING ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_FILTERS ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_FULLSCREEN_API ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_GAMEPAD ON)
-WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_INDEXED_DATABASE ON)
+WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_INDEXED_DATABASE OFF)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_INDEXED_DATABASE_IN_WORKERS OFF)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_INPUT_TYPE_COLOR ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_LINK_PREFETCH ON)
@@ -287,11 +287,6 @@ if (ENABLE_ACCESSIBILITY)
     find_package(ATK 2.10.0 REQUIRED)
 else ()
     add_definitions(-DHAVE_ACCESSIBILITY=0)
-endif ()
-
-if (ENABLE_INDEXED_DATABASE)
-    set(WTF_USE_LEVELDB 1)
-    add_definitions(-DWTF_USE_LEVELDB=1)
 endif ()
 
 if (ENABLE_FTL_JIT)
