@@ -1,3 +1,15 @@
+2014-04-27  Joonghun Park  <jh718.park@samsung.com>
+
+        [EFL] Remove indexedDB's dependency on leveldb and disable indexedDB
+        https://bugs.webkit.org/show_bug.cgi?id=132176
+
+        Reviewed by Gyuyoung Kim.
+
+        EFL port will use sqlite to support indexedDB. So, this patch removes levelDB dependency
+        and turn off indexedDB feature until the sqlite implementation is introduced.
+
+        * Scripts/webkitperl/FeatureList.pm:
+
 2014-04-25  James Craig  <jcraig@apple.com>
 
         Set prepare-Changelog flag so that it no longer runs check-webkit-style by default
